--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -44,9 +44,6 @@ header {
       font-size: calc(0.6vw + 0.5rem);
       letter-spacing: 0.29rem;
     }
-    @media (min-width: 900px) and (orientation: portrait) {
-      font-size: calc(2.8vh + 0.5rem);
-    }
   }
 }
 /** Navigation **/
